# WebTiebaManager

./: .gitignore  README.md  install_windows.md  pyproject.toml  ruff.toml  rule_set_config.yaml  start.py  test.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  package.yml
core/: config.py  constance.py  control.py  typedef.py
core/db/: __init__.py  interface.py  models.py
core/process/: life.py  process.py  typedef.py
core/rule/: __init__.py  content_rule.py  operation.py  rule.py  rule_set.py  template.py  user_rule.py
core/server/: config.py  encryt.py  http.py  initialize.py  server.py  token.py
core/tieba/: browser.py  config.py  crawler.py  info.py
core/user/: config.py  confirm.py  manager.py  user.py
core/util/: cache.py  event.py  tools.py
src/: __init__.py  _tracer.py  config.py  constance.py  control.py  typedef.py
src/api/: __init__.py  auth.py  encryt.py  server.py
src/core/: config.py  constants.py  controller.py  initialize.py  plugin.py
src/db/: __init__.py  config.py  interface.py  models.py
src/http/: __init__.py  initialize.py  log.py  resource.py  system.py  tieba_qrcode_login.py  user.py  webui.py
src/models/: __init__.py  models.py
src/process/: __init__.py  context.py  process.py  typedef.py
src/rule/: __init__.py  condition.py  content_condition.py  operation.py  option.py  rule.py  rule_set.py  template.py  user_condition.py  user_rule.py
src/schemas/: event.py  process.py  rule.py  tieba.py  user.py
src/server/: __init__.py  (+6 more)
test/: conftest.py  test_cache.py  test_database.py  test_event.py
(+35 files in other folders)
