[project]
name = "web-tieba-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "aiotieba>=4.6.0",
    "apscheduler>=3.11.0",
    "asyncmy>=0.2.10",
    "asyncpg>=0.30.0",
    "cashews[diskcache]>=7.4.1",
    "fastapi>=0.116.1",
    "numpy>=2.3.2",
    "opencv-python-headless>=4.11.0.86",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.7",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.43",
    "tomlkit>=0.13.3",
    "tzdata>=2025.2",
    "uvicorn>=0.35.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
